--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         </ul>
         <ul class="list">
             <li class="list_list">
-                <a href="210610_training.html" class="list_link">21/06/18 スコーン作り</a>
+                <a href="210618_scone.html" class="list_link">21/06/18 スコーン作り</a>
             </li>
         </ul>
         <ul class="list">
