--- a/210610_training.html
+++ b/210610_training.html
@@ -15,7 +15,7 @@
         <div class="footer">
             <div class="page"><a href="210528_lunch.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="210707_tanabata1.html">next</a></div>
+            <div class="page"><a href="210618_scone.html">next</a></div>
         </div>
         <h3 class="h3-b">2021/06/10　深夜</h3>
 
