--- a/210130_ts.html
+++ b/210130_ts.html
@@ -3649,7 +3649,7 @@
             <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1files1a93cab56bb99e48c0a517.png"></div>
             <div class="p">
                 <b class="mitsu">夜高ミツル</b><br>
-                余計な考え事洗い流してしまおうとばかりに、頭から湯を被る。
+                余計な考え毎洗い流してしまおうとばかりに、頭から湯を被る。
             </div>
         </div>
         <div class="main">
