--- a/index.html
+++ b/index.html
@@ -622,6 +622,8 @@
                         class="pict" src="img/pic_mushipan2.png"></a>
                 <a href="img/pic_suzuka.png" data-fimg="pict" data-fcaption="すずかさんより/コミッション依頼品" class="fuwaimg"><img
                         class="pict" src="img/pic_suzuka.png"></a>
+                <a href="img/pic_suzuka2.png" data-fimg="pict" data-fcaption="すずかさんより/コミッション依頼品" class="fuwaimg"><img
+                        class="pict" src="img/pic_suzuka.png"></a>
             </div>
         </details>
         <details>
