--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                 <a href="img/pic_suzuka.png" data-fimg="pict" data-fcaption="すずかさんより/コミッション依頼品" class="fuwaimg"><img
                         class="pict" src="img/pic_suzuka.png"></a>
                 <a href="img/pic_suzuka2.png" data-fimg="pict" data-fcaption="すずかさんより/コミッション依頼品" class="fuwaimg"><img
-                        class="pict" src="img/pic_suzuka.png"></a>
+                        class="pict" src="img/pic_suzuka2.png"></a>
             </div>
         </details>
         <details>
